--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/TestCRUD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.itextpdf-5.4.5.jar=C:\\Users\\NA\\Downloads\\itextpdf-5.4.5.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\NA\\Downloads\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.itextpdf-5.4.5.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
